<resources>
    <string name="about_app">Baby Name %s\n\nThis application allows you to find your favorite baby name from a collection of >40000 names.\n\nThis application is entirely Open-Source (GPL-3.0-or-later). Any suggestion, help or question is welcome. Visit https://github.com/mdecorde/BabyName for more information.\n\nDatabase under Copyright 2007-2008 by Jörg MICHAEL, GFDL-1.2-or-later.</string>
    <string name="about_button">About</string>
    <string name="action_delete_baby">Delete</string>
    <string name="action_dig_baby">Find name...</string>
    <string name="action_new_baby">New</string>
    <string name="action_reset_baby">Reset scores</string>
    <string name="action_save_babyproject">OK</string>
    <string name="action_settings">Settings</string>
    <string name="action_top_baby">Top 10!</string>
    <string name="all_names_reviewed">All names have been reviewed!</string>
    <string name="app_name">Baby Name</string>
    <string name="boy">Boy</string>
    <string name="boy_name">A boy which</string>
    <string name="boy_or_girl_name">A boy or a girl which</string>
    <string name="button_abort">Abort</string>
    <string name="button_drop_20_percent">Drop 20%</string>
    <string name="button_drop_percent">Drop last %d%%</string>
    <string name="button_export">Export</string>
    <string name="button_add">Add</string>
    <string name="button_replace">Replace</string>
    <string name="button_reset">Reset</string>
    <string name="button_sort">Sort</string>
    <string name="copy">Copy</string>
    <string name="delete">Delete</string>
    <string name="delete_question_content">Do you really really really want to delete this search?</string>
    <string name="delete_question_title">Delete search</string>
    <string name="description_best_match_is">Best match is \'%s\'.</string>
    <string name="description_matches_with">Matches with \'%s\'.</string>
    <string name="description_origin_are">origins are %s.</string>
    <string name="description_origin_is">origin is %s.</string>
    <string name="description_stats">"%d names total. %d%% have been rated."</string>
    <string name="dialog_drop_unrated_message">Drop %d unrated of %d names?</string>
    <string name="dialog_drop_unrated_title">Drop Unrated</string>
    <string name="dialog_drop_worst_message">Drop worst 20%% (%d) of %d names?</string>
    <string name="dialog_drop_worst_title">Drop Worst</string>
    <string name="done">Done</string>
    <string name="dropped_names">Dropped %d names</string>
    <string name="edit_title">Baby Name Preferences</string>
    <string name="finish_round_message">End round, remove worst %d%% of names and shuffle?</string>
    <string name="finish_round_title">Finish</string>
    <string name="gender_all">All</string>
    <string name="gender_neutral">Neutral</string>
    <string name="gender_female">Female</string>
    <string name="gender_female_description">Female first name.</string>
    <string name="gender_male">Male</string>
    <string name="gender_male_description">Male first name.</string>
    <string name="gender_unisex">Unisex</string>
    <string name="gender_unisex_description">Can be male or female.</string>
    <string name="gender_mostly_male">Mostly Male</string>
    <string name="gender_mostly_male_description">Male name, if first part of name; else: mostly male name.</string>
    <string name="gender_mostly_female">Mostly Female</string>
    <string name="gender_mostly_female_description">Female name, if first part of name; else: mostly female name.</string>
    <string name="gender_somewhat_male">Somewhat Male</string>
    <string name="gender_somewhat_male_description">Unisex name, which is mostly male.</string>
    <string name="gender_somewhat_female">Somewhat Female</string>
    <string name="gender_somewhat_female_description">Unisex name, which is mostly female.</string>
    <string name="genre">Gender:</string>
    <string name="girl">Girl</string>
    <string name="girl_name">A girl whose</string>
    <string name="go">Go</string>
    <string name="home_text">Baby name projects \n(click \'new\' to start a project)</string>
    <string name="keep_existing_names">Keep %d existing names:</string>
    <string name="legend">Legend</string>
    <string name="loading">Loading…</string>
    <string name="menu_abort">Abort</string>
    <string name="menu_about">About</string>
    <string name="menu_database">Database</string>
    <string name="menu_drop_unrated">Drop Unrated</string>
    <string name="menu_drop_worst_20pc">Drop Worst 20%</string>
    <string name="menu_jump_end">Jump to End</string>
    <string name="menu_jump_start">Jump to Start</string>
    <string name="menu_new_baby">New Baby</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_shuffle">Shuffle</string>
    <string name="message_no_name_to_review">No names to review!</string>
    <string name="n_name_left">%d left.</string>
    <string name="name_pattern_malformed">Name pattern is malformed: \n%s</string>
    <string name="name_rated_score">%s rated: %.1f</string>
    <string name="name_was_removed">Name was removed from the list.</string>
    <string name="names_counter">(%d Names)</string>
    <string name="neutral_name">A neutral name which</string>
    <string name="new_baby">New baby! \\o/</string>
    <string name="next">Next</string>
    <string name="no">No</string>
    <string name="no_baby">No Baby!</string>
    <string name="no_more_names">No more names.</string>
    <string name="no_name_rated">No name rated yet. Start by pressing any search button.</string>
    <string name="no_origin">has no specific origin.</string>
    <string name="no_pattern">has no specific pattern.</string>
    <string name="no_remaining_loop">No remaining names to review (loop=%d). Start a new review loop with %d names?</string>
    <string name="ok">OK</string>
    <string name="origin_item_great_britain">Great Britain</string>
    <string name="origin_item_ireland">Ireland</string>
    <string name="origin_item_usa">U.S.A.</string>
    <string name="origin_item_italy">Italy</string>
    <string name="origin_item_malta">Malta</string>
    <string name="origin_item_portugal">Portugal</string>
    <string name="origin_item_spain">Spain</string>
    <string name="origin_item_france">France</string>
    <string name="origin_item_belgium">Belgium</string>
    <string name="origin_item_luxembourg">Luxembourg</string>
    <string name="origin_item_netherlands">the Netherlands</string>
    <string name="origin_item_east_frisia">East Frisia</string>
    <string name="origin_item_germany">Germany</string>
    <string name="origin_item_austria">Austria</string>
    <string name="origin_item_swiss">Swiss</string>
    <string name="origin_item_iceland">Iceland</string>
    <string name="origin_item_denmark">Denmark</string>
    <string name="origin_item_norway">Norway</string>
    <string name="origin_item_sweden">Sweden</string>
    <string name="origin_item_finland">Finland</string>
    <string name="origin_item_estonia">Estonia</string>
    <string name="origin_item_latvia">Latvia</string>
    <string name="origin_item_lithuania">Lithuania</string>
    <string name="origin_item_poland">Poland</string>
    <string name="origin_item_czech_republic">Czech Republic</string>
    <string name="origin_item_slovakia">Slovakia</string>
    <string name="origin_item_hungary">Hungary</string>
    <string name="origin_item_romania">Romania</string>
    <string name="origin_item_bulgaria">Bulgaria</string>
    <string name="origin_item_bosnia_and_herzegovina">Bosnia and Herzegovina</string>
    <string name="origin_item_croatia">Croatia</string>
    <string name="origin_item_kosovo">Kosovo</string>
    <string name="origin_item_macedonia">Macedonia</string>
    <string name="origin_item_montenegro">Montenegro</string>
    <string name="origin_item_serbia">Serbia</string>
    <string name="origin_item_slovenia">Slovenia</string>
    <string name="origin_item_albania">Albania</string>
    <string name="origin_item_greece">Greece</string>
    <string name="origin_item_russia">Russia</string>
    <string name="origin_item_belarus">Belarus</string>
    <string name="origin_item_moldova">Moldova</string>
    <string name="origin_item_ukraine">Ukraine</string>
    <string name="origin_item_armenia">Armenia</string>
    <string name="origin_item_azerbaijan">Azerbaijan</string>
    <string name="origin_item_georgia">Georgia</string>
    <string name="origin_item_kazakhstan">Kazakhstan</string>
    <string name="origin_item_kyrgyzstan">Kyrgyzstan</string>
    <string name="origin_item_tajikistan">Tajikistan</string>
    <string name="origin_item_turkmenistan">Turkmenistan</string>
    <string name="origin_item_uzbekistan">Uzbekistan</string>
    <string name="origin_item_turkey">Turkey</string>
    <string name="origin_item_arabia_persia">Arabia/Persia</string>
    <string name="origin_item_israel">Israel</string>
    <string name="origin_item_china">China</string>
    <string name="origin_item_india">India</string>
    <string name="origin_item_sri_lanka">Sri Lanka</string>
    <string name="origin_item_japan">Japan</string>
    <string name="origin_item_korea">Korea</string>
    <string name="origin_item_vietnam">Vietnam</string>
    <string name="origin_item_other">other</string>
    <string name="origins">Origins:</string>
    <string name="pattern">Pattern:</string>
    <string name="pattern_help">The pattern is a regular expression. For instance: \n - \'.....+\' finds names with length greater than 5 letters, \n - \'R...+\' finds name starting with the \'R\' letter and length is greater than 4 letters, \n - \'.+r\' finds name ending with the \'r\' letter.\n\nMore informations at https://developer.android.com/reference/java/util/regex/Pattern.html</string>
    <string name="previous">Previous</string>
    <string name="remaining_names">%d remaining names to review.</string>
    <string name="remove">Remove</string>
    <string name="reset_question_content">Do you want to reset this searches scores?</string>
    <string name="reset_question_title">Reset search scores</string>
    <string name="separator_and">and</string>
    <string name="separator_or">or</string>
    <string name="settings_next_on_rating">Next Name on Rating</string>
    <string name="starting_new_loop">Starting a new review loop!</string>
    <string name="text_copied">Text copied.</string>
    <string name="too_much_constraint">Too much name constraint, no name found</string>
    <string name="top">Top 10!</string>
    <string name="top_title">Top 10!</string>
    <string name="undo">Undo</string>
    <string name="yes">Yes</string>
</resources>